--- a/index.html
+++ b/index.html
@@ -60,147 +60,168 @@
         <div class="company">
             <img src="logos/Carhuamayo-logo.png" alt="Logo Carhuamayo">
             <span class="company-name">CARHUAMAYO</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiNmUxNzVjZTItZGFjYS00M2QxLWJhYzEtMmU0YjQ0OWM3NzkwIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNmUxNzVjZTItZGFjYS00M2QxLWJhYzEtMmU0YjQ0OWM3NzkwIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjc2OTg3ZmYtOWY1MC00YmZlLWE0M2ItNDZhZGIyY2RhN2NmIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- CRUZ DEL NORTE -->
         <div class="company">
             <img src="logos/CruzDelNorte-logo.png" alt="Logo Cruz del Norte">
             <span class="company-name">CRUZ DEL NORTE</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjYyNWRhOTktNjA4Yi00MjViLTg4NDktYTUyZTMwNWI3MmVlIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjYyNWRhOTktNjA4Yi00MjViLTg4NDktYTUyZTMwNWI3MmVlIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMmE4YTA0Y2YtZjE4YS00M2NmLTg2YzItY2JhNWI3OTU1NzJiIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- LATHAM PERU/EL CHARAPITO -->
         <div class="company">
             <img src="logos/LathamPeru-logo.png" alt="Logo Latham Peru/El Charapito">
             <span class="company-name">LATHAM PERU/EL CHARAPITO</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjUzYTQxNzctMTA0OS00YWVlLTkxM2MtZjkxZmEwY2E3NWFhIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjUzYTQxNzctMTA0OS00YWVlLTkxM2MtZjkxZmEwY2E3NWFhIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiM2M5MmIxYjctMGVkMS00NDU0LTlhY2EtY2U0NGVlYzJkNzZkIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- EMP. Transp. Exp Nac Cerro -->
         <div class="company">
             <img src="logos/ExpresoNacional-logo.png" alt="Logo EMP. Transp. Exp Nac Cerro">
             <span class="company-name">EMP. Transp. Exp Nac Cerro</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMzRlYjNiYzMtOGY5ZS00NzQ4LWI2ZWUtY2U0ZDRjMGY1MGQ0IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMzRlYjNiYzMtOGY5ZS00NzQ4LWI2ZWUtY2U0ZDRjMGY1MGQ0IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTk0NDBkYWMtMGVhNS00MWNhLWEyYWItNWYxZmFkOGQ3MDhkIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Megabus -->
         <div class="company">
             <img src="logos/MegaBus-logo.png" alt="Logo Megabus">
             <span class="company-name">Megabus</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZWRkYTZkOTctNzY1Mi00ZDMxLTkzYjItYTQ2MDJiNjcyNjk2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZWRkYTZkOTctNzY1Mi00ZDMxLTkzYjItYTQ2MDJiNjcyNjk2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiN2I5YmYzNjctNThhYy00NjJjLWE0MTgtZWVkZGM1NDFlMGI3IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Turismo del Norte S.A.C. -->
         <div class="company">
             <img src="logos/TurismoDelNorte-logo.png" alt="Logo Turismo del Norte S.A.C.">
             <span class="company-name">Turismo del Norte S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZDU1ZGQ0MjgtNTFmZC00ZmIzLWE2MTUtMWViM2FlN2FkZTQyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZDU1ZGQ0MjgtNTFmZC00ZmIzLWE2MTUtMWViM2FlN2FkZTQyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTFjOGYxZDgtNzlhMy00NGNkLWIyZTUtYzc3ZjYxYzgzNzJlIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Empresa de Transportes San Martin de Porres -->
         <div class="company">
             <img src="logos/SanMartin-logo.png" alt="Logo Empresa de Transportes San Martin de Porres">
             <span class="company-name">Empresa de Transportes San Martin de Porres</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTZkZGM2NzAtOWUyNS00OTkzLWExNDctOGE4MmM1MjgyMjIxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTZkZGM2NzAtOWUyNS00OTkzLWExNDctOGE4MmM1MjgyMjIxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZDNjZjk0ZTctYzk0ZS00MzhlLWIxNDQtMDM0YjExZDcyMGMzIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- EMPR. Transp. Turismo Mer S.R.L. -->
         <div class="company">
             <img src="logos/TurismoMer-logo.png" alt="Logo EMPR. Transp. Turismo Mer S.R.L.">
             <span class="company-name">EMPR. Transp. Turismo Mer S.R.L.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiN2ZiMDY0ZjItZTMwOS00ZTVkLTk5M2QtODYyODA1MjQxYjM2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiN2ZiMDY0ZjItZTMwOS00ZTVkLTk5M2QtODYyODA1MjQxYjM2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYTI2ZDcwNTgtYTE2Ni00N2E2LTliMGYtYzA5NmQ0NTJkOWRkIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Cooperativa De Transportes Ancash -->
         <div class="company">
             <img src="logos/Ancash-logo.png" alt="Logo Cooperativa De Transportes Ancash">
             <span class="company-name">Cooperativa De Transportes Ancash</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMGRkMjdlMjgtOWI4Ny00NzVlLWIzM2EtZDhiMjAxZjExOTMyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYWY2YjVkNDktMGQ4ZS00ZGMzLTk0NmQtYjVkZDE4Nzk0ZTUzIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiM2E2MDA3OWItNjYyNS00NGU1LThjN2UtNWVhNTFiM2NjZTc4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Selva Tours -->
         <div class="company">
             <img src="logos/SelvaTorus-logo.png" alt="Logo Selva Tours">
             <span class="company-name">Selva Tours</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZmY4M2E1NzctNzkwYS00ZTA2LTllNTctMTY5NWZlN2MxMWExIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNTVkM2UyMjAtZmNlNC00NDgyLTlhN2YtMzYxNTI4NDIwNTQyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjgxMzQ4NWYtMTM5YS00MGFhLTkyM2EtMDg0NmZkZDM2MDA2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Tours Rodriguez -->
         <div class="company">
             <img src="logos/ToursRodriguez-logo.png" alt="Logo Tours Rodriguez">
             <span class="company-name">Tours Rodriguez</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiYjU2Nzg2YzgtNmJkYi00OTQzLWE5NmItMDIxZDk3OWNkNDA2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjZhMDliMGQtY2ZhNi00NzdiLWEwNTctZjhiNzFjZDk2MjE4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMDU5ZjA1NGUtNzQwZi00NWFhLTlmNTUtZjIyMWY2NTk3ZjUxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Empresa de Transportes Rimac Nacional S.R.L. -->
         <div class="company">
-            <img src="logos/ExpresoNacional-logo.png" alt="Logo Empresa de Transportes Rimac Nacional S.R.L.">
+            <img src="logos/Rimac-logo.png" alt="Logo Empresa de Transportes Rimac Nacional S.R.L.">
             <span class="company-name">Empresa de Transportes Rimac Nacional S.R.L.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZGU5NDg0NDAtZDgwNi00ODdhLWI5YzEtMjBhZmNiOGNiNTk3IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjM0NDMzOTYtMzVlNC00ZDdmLTg3NDAtNTFiNDhjMzNlODk2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMDEwMDEwZGUtY2Q0ZS00Y2UzLTliMTUtZTZiMDFkNDFjOTYwIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Express Sifuentes S.A.C. -->
         <div class="company">
             <img src="logos/Sifuentes-logo.png" alt="Logo Express Sifuentes S.A.C.">
             <span class="company-name">Express Sifuentes S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiYWNhMGE5NTgtYjBmOC00YzQ3LTliMzMtMTAzNzIwNDY5NjY4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNTk2MjFjMTAtMjNjZi00YzUyLWE5ZjctOTcxNzA2MTkwMzM0IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNTAwNmZlYzgtYTI4Ny00YzM5LTkyYjAtZTViOTI3YThhNmNmIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Transportes Y Servicios Inca Atahualpa S.R.L. -->
         <div class="company">
             <img src="logos/Atahualpa-logo.png" alt="Logo Transportes Y Servicios Inca Atahualpa S.R.L.">
             <span class="company-name">Transportes Y Servicios Inca Atahualpa S.R.L.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZmFjYmIzMzctM2YyOS00MTU5LWEwYjQtMGNjYWE1OTMzOWM1IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZmRjNTc2YjktZjE4Zi00YjA5LWE5ZTgtMmNkNmNhMmE2ZTJiIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTk5OTE2NzgtNGQ4Yi00MWExLTgyNTktMDgxNTc0MDNhZjZmIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Euro Bus S.A.C. -->
         <div class="company">
-            <img src="logos/Eurobus-logo.png" alt="Logo Euro Bus S.A.C.">
+            <img src="logos/EuroBus-logo.png" alt="Logo Euro Bus S.A.C.">
             <span class="company-name">Euro Bus S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiYWMyODdjNDYtOWI3Zi00ZDRhLTgzMjktYzQyZThmZDljZGVmIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjk2M2JkMWUtMzYwZi00OTViLWJiYzYtYmVmM2QxYmI5YzYyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiN2RlMTU2ZTYtOTkzNS00NWIyLWIyYmMtODY3ODUwMDZhYTljIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
-        <!-- Empresa de Transportes Expreso Selva E.I.R.L -->
+        <!-- Empresa de Transportes Expreso Selva E.I.R.L. -->
         <div class="company">
-            <img src="logos/ExpresoSelva-logo.png" alt="Logo Empresa de Transportes Expreso Selva E.I.R.L">
-            <span class="company-name">Empresa de Transportes Expreso Selva E.I.R.L</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMTQ5N2UxMWItNzhjZi00ZTQyLWI2MzItNTI4ZDVkMjVmZmFlIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <img src="logos/ExpresoSelva-logo.png" alt="Logo Empresa de Transportes Expreso Selva E.I.R.L.">
+            <span class="company-name">Empresa de Transportes Expreso Selva E.I.R.L.</span>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYjQzNDA0YzYtZTdlZS00NmNjLWFiNzctZjgwNGY0MjNmY2JjIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNGVkZTkzMWEtMDcwMi00NDYzLWE1MDUtOTFjYmE0ZDAyMDY4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Empresa de Transportes Turismo Las Brizas -->
         <div class="company">
             <img src="logos/Brizas-logo.png" alt="Logo Empresa de Transportes Turismo Las Brizas">
             <span class="company-name">Empresa de Transportes Turismo Las Brizas</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjcyOTNhMGYtMTJjNy00NTZlLThlZmUtZjlhNzYxNDUyMmM3IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYmFhYzM1M2QtZjNhNi00MTNmLTllNWMtOGNmN2E0YjZkNGJiIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNzQzNzVjNWYtNGQzNy00Yjk4LWEwMTQtMjQxZjJhMTFjODE3IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Empresa de Tranportes Sanson Express S.A.C. -->
         <div class="company">
             <img src="logos/Sanson-logo.png" alt="Logo Empresa de Tranportes Sanson Express S.A.C.">
             <span class="company-name">Empresa de Tranportes Sanson Express S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiYTVhZGFkMWItNDBkNC00YzgyLTk4ZGYtODAwOWU0NGRkOTYxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNzUwMTEwODItZDIyZC00NTY0LThhZGMtNDM4ZmYzNDhiYzEyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjI3NzQzYTctZTBlNi00MWRlLTlhMzUtNTI2MzAwNTUyMDdhIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- CARMELITAS -->
         <div class="company">
             <img src="logos/Carmelitas-logo.png" alt="Logo CARMELITAS">
             <span class="company-name">CARMELITAS</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMDBiNTk4N2YtNDM4YS00NDdlLWE2MzUtNzk5MjE2MGNiN2Y0IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYjE3MWUwZGMtYzEwZi00ZjA2LTg2NzUtZmM1MTlkMDMxMmRlIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNzljYzRhNmEtOWQ0Yy00NTFkLTlhNmQtNGZmMjhlOTQ0ODM5IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- BRISAS DEL ORIENTE -->
         <div class="company">
-            <img src="logos/BrizasDelOriente-logo.png" alt="Logo BRISAS DEL ORIENTE">
+            <img src="logos/BrisasDelOriente-logo.png" alt="Logo BRISAS DEL ORIENTE">
             <span class="company-name">BRISAS DEL ORIENTE</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiNzk1ZDU5ZmMtZTY1Ny00MDI4LTlkZWYtYjc2ZjAxYWZhN2Q2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTc5OTNmYjktMDkyMy00ZTcwLWI4NjktOWRmNmI1ZTI0OTg3IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMWRkZjU0YWUtMmJiOC00MGNmLWFmNzYtOGYxYzc1N2YwMmNkIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- Flor Movil S.A.C. -->
         <div class="company">
             <img src="logos/FlorMovil-logo.png" alt="Logo Flor Movil S.A.C.">
             <span class="company-name">Flor Movil S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiM2ZkMjk5NzMtZjM3Zi00YTE4LThhZjMtYTM2OTZmZDc4OGRiIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiM2ZkMjk5NzMtZjM3Zi00YTE4LThhZjMtYTM2OTZmZDc4OGRiIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYjNiZjk4ZDMtNGNjYS00YmM1LTg0OTctOWYyZjE3NzczYzE4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
     </div>
