--- a/index.html
+++ b/index.html
@@ -92,15 +92,18 @@
         <div class="company">
             <img src="logos/MegaBus-logo.png" alt="Logo Megabus">
             <span class="company-name">Megabus</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZWRkYTZkOTctNzY1Mi00ZDMxLTkzYjItYTQ2MDJiNjcyNjk2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiOTkyNTRlZTgtZTg3ZC00YzRkLWFhMTItY2I3NzVmM2QyNmQxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZWRkYTZkOTctNzY1Mi00ZDMxLTkzYjItYTQ2MDJiNjcyNjk2IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiN2I5YmYzNjctNThhYy00NjJjLWE0MTgtZWVkZGM1NDFlMGI3IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
+            
         </div>
 
         <!-- Turismo del Norte S.A.C. -->
         <div class="company">
             <img src="logos/TurismoDelNorte-logo.png" alt="Logo Turismo del Norte S.A.C.">
             <span class="company-name">Turismo del Norte S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZDU1ZGQ0MjgtNTFmZC00ZmIzLWE2MTUtMWViM2FlN2FkZTQyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZGMyMThkMGYtMDNkMy00MzBiLTlmOWYtOWJkMGQwNTVkOTk0IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZDU1ZGQ0MjgtNTFmZC00ZmIzLWE2MTUtMWViM2FlN2FkZTQyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiZTFjOGYxZDgtNzlhMy00NGNkLWIyZTUtYzc3ZjYxYzgzNzJlIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
@@ -108,7 +111,8 @@
         <div class="company">
             <img src="logos/SanMartin-logo.png" alt="Logo Empresa de Transportes San Martin de Porres">
             <span class="company-name">Empresa de Transportes San Martin de Porres</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTZkZGM2NzAtOWUyNS00OTkzLWExNDctOGE4MmM1MjgyMjIxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiODI2OThmYjctMDZjZC00ZDZjLWI4NmItNTg1MmY3Y2FkNDliIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTZkZGM2NzAtOWUyNS00OTkzLWExNDctOGE4MmM1MjgyMjIxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiZDNjZjk0ZTctYzk0ZS00MzhlLWIxNDQtMDM0YjExZDcyMGMzIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
@@ -124,7 +128,8 @@
         <div class="company">
             <img src="logos/Ancash-logo.png" alt="Logo Cooperativa De Transportes Ancash">
             <span class="company-name">Cooperativa De Transportes Ancash</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMGRkMjdlMjgtOWI4Ny00NzVlLWIzM2EtZDhiMjAxZjExOTMyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZjUzMGFmMTMtOWU1MC00MGNiLWJiNzUtODRlYjRmNDE4OWQ0IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYWY2YjVkNDktMGQ4ZS00ZGMzLTk0NmQtYjVkZDE4Nzk0ZTUzIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiM2E2MDA3OWItNjYyNS00NGU1LThjN2UtNWVhNTFiM2NjZTc4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
@@ -140,7 +145,8 @@
         <div class="company">
             <img src="logos/ToursRodriguez-logo.png" alt="Logo Tours Rodriguez">
             <span class="company-name">Tours Rodriguez</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjZhMDliMGQtY2ZhNi00NzdiLWEwNTctZjhiNzFjZDk2MjE4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMWExN2M0NTAtNzVhNS00NDI5LTkzN2ItMGU4NDdmZmM1ZDkzIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjZhMDliMGQtY2ZhNi00NzdiLWEwNTctZjhiNzFjZDk2MjE4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMDU5ZjA1NGUtNzQwZi00NWFhLTlmNTUtZjIyMWY2NTk3ZjUxIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
@@ -172,7 +178,8 @@
         <div class="company">
             <img src="logos/EuroBus-logo.png" alt="Logo Euro Bus S.A.C.">
             <span class="company-name">Euro Bus S.A.C.</span>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjk2M2JkMWUtMzYwZi00OTViLWJiYzYtYmVmM2QxYmI5YzYyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiNmUxN2MyMTctNmQ3Mi00OWQwLWE5NmQtMmE0Y2I5MWIwZjI5IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjk2M2JkMWUtMzYwZi00OTViLWJiYzYtYmVmM2QxYmI5YzYyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiN2RlMTU2ZTYtOTkzNS00NWIyLWIyYmMtODY3ODUwMDZhYTljIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
@@ -227,4 +234,3 @@
     </div>
 </body>
 </html>
-
