--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
         <!-- Euro Bus S.A.C. -->
         <div class="company">
-            <img src="logos/EuroBus-logo.png" alt="Logo Euro Bus S.A.C.">
+            <img src="logos/Eurobus-logo.png" alt="Logo Euro Bus S.A.C.">
             <span class="company-name">Euro Bus S.A.C.</span>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiNmUxN2MyMTctNmQ3Mi00OWQwLWE5NmQtMmE0Y2I5MWIwZjI5IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" >Ver Dashboard Excesos</a>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMjk2M2JkMWUtMzYwZi00OTViLWJiYzYtYmVmM2QxYmI5YzYyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank"style="margin-left: 20px;">Ver Dashboard Ventas</a>
