--- a/index.html
+++ b/index.html
@@ -231,6 +231,13 @@
             <a href="https://app.powerbi.com/view?r=eyJrIjoiYjNiZjk4ZDMtNGNjYS00YmM1LTg0OTctOWYyZjE3NzczYzE4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
+        <!-- Transporte Jara -->
+        <div class="company">
+            <img src="logos/TransporteJara-logo.png" alt="Transporte Jara.">
+            <span class="company-name">Flor Movil S.A.C.</span>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiY2NiZmI4YzItY2JjYS00ZDlmLWEyZGEtOTFjM2MxYzFhY2Y4IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
+        </div>
+
     </div>
 </body>
 </html>
