--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="logos/Carhuamayo-logo.png" alt="Logo Carhuamayo">
             <span class="company-name">CARHUAMAYO</span>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiNmUxNzVjZTItZGFjYS00M2QxLWJhYzEtMmU0YjQ0OWM3NzkwIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank">Ver Dashboard Ventas</a>
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjc2OTg3ZmYtOWY1MC00YmZlLWE0M2ItNDZhZGIyY2RhN2NmIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px title="Ver Dashboard de Ventas en Power BI";">Ver Dashboard Encomiendas</a>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiMjc2OTg3ZmYtOWY1MC00YmZlLWE0M2ItNDZhZGIyY2RhN2NmIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" style="margin-left: 20px;">Ver Dashboard Encomiendas</a>
         </div>
 
         <!-- CRUZ DEL NORTE -->
