--- a/index.html
+++ b/index.html
@@ -251,7 +251,13 @@
             <span class="company-name" title="Empresa Bus Torres">Bus Torres</span>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiNjNjMjBiN2QtYWRkMC00YTZkLTgxNzQtNzFjZGQ4YTczNzcyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
         </div>
-        
+
+        <!-- Smile -->
+        <div class="company">
+            <img src="logos/Smile-logo.png" alt="Logo Smile" title="Logo de Smile">
+            <span class="company-name" title="Empresa Smile">Smile</span>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYzhiYzM1MzAtZjEzZC00ZDdiLTk3ODktZjU5ODBlYmJlMThkIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
+        </div>
         <!-- Chayo -->
         <div class="company">
             <img src="logos/Chayo-logo.png" alt="Logo Chayo" title="Logo de Chayo">
@@ -301,10 +307,10 @@
             <a href="https://app.powerbi.com/view?r=eyJrIjoiYTAxMmM2ZTctZWZlMS00YzMwLThlNzItYmY3N2NkOTAxODU1IiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
         </div>
         
-        <!-- Ramgel -->
+        <!-- Rangel -->
         <div class="company">
-            <img src="logos/Ramgel-logo.png" alt="Logo Ramgel" title="Logo de Ramgel">
-            <span class="company-name" title="Empresa Ramgel">Ramgel</span>
+            <img src="logos/Rangel-logo.png" alt="Logo Ramgel" title="Logo de Rangel">
+            <span class="company-name" title="Empresa Rangel">Rangel</span>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMjMyNWI0ODgtMTE1Ny00M2FiLTlhOTMtZWVhOTgyODBhNTgyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
         </div>
 
