--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         
         <!-- Juanchavez -->
         <div class="company">
-            <img src="logos/Juanchavez-logo.png" alt="Logo Juanchavez" title="Logo de Juanchavez">
+            <img src="logos/JuanChavez-logo.png" alt="Logo Juanchavez" title="Logo de Juanchavez">
             <span class="company-name" title="Empresa Juanchavez">Juanchavez</span>
             <a href="https://app.powerbi.com/view?r=eyJrIjoiOGQ5ZjcwZGUtZjk4NS00NWZlLWE1NDUtZjA3OTljMWI1NTVhIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
         </div>
