--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@
             <a href="https://app.powerbi.com/view?r=eyJrIjoiMjMyNWI0ODgtMTE1Ny00M2FiLTlhOTMtZWVhOTgyODBhNTgyIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
         </div>
 
+        <!-- Mosaic -->
+        <div class="company">
+            <img src="logos/Mosaic-logo.png" alt="Logo Mosaic" title="Logo de Mosaic">
+            <span class="company-name" title="Empresa Mosaic">Mosaic</span>
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiYTNkMjc5NzktZjI1Ni00ZTY1LWIyYjMtZTk2M2UyMjhkMDRiIiwidCI6IjQ0OGI0YWVlLTM3YzYtNGI5My05ZDg3LTY1YzM5ZDM3NTFiNSJ9" target="_blank" title="Ver Dashboard Ventas">Ver Dashboard Ventas</a>
+        </div>
+
     </div>
 </body>
 </html>
